wiki realease on substack

--- a/README
+++ b/README
@@ -187,3 +187,8 @@ Usage:
 
 
 For more, come to my collections of write-ups for real-world use cases and write-ups on <https://byt3n33dl3.substack.com> if there's any security concern, please contact me at <mailto:byt3n33dl3@proton.me>
+
+WIKI:
+
+<https://byt3n33dl3.substack.com/p/architecture-matrix-jennifer-pt-2>
+<https://byt3n33dl3.substack.com/p/kdbx3-and-kdbx4-cracker-with-jennifer>
